Added a submit button and styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,17 @@ body {
 }
 
 form {
-  margin: 85px auto;
+  margin: 75px auto;
   max-width: 300px;
-  padding: 50px 25px;
+  padding: 50px 80px 50px 50px;
   background: #f4f7f8;
   border-radius: 8px;
-  text-align: center;
+  text-align: left;
 }
 
 h1 {
-  margin: 0 0 30px 0;
-  text-align: center;
+  margin: 0 0 50px 0;
+  text-align: left;
 }
 
 input[type="text"],
@@ -35,4 +35,37 @@ input[type="url"],
 textarea,
 select {
   background: rgba(255, 255, 255, 0.1);
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 15px;
+  width: 100%;
+  background-color: #e8eeef;
+  color: #8a97a0;
+  box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1);
+  margin-bottom: 30px;
 }
+
+input[type="radio"],
+input[type="checkbox"] {
+  margin: 0 4px 8px 0;
+}
+
+select {
+  padding: 6px;
+  height: 32px;
+  border-radius: 2px;
+}
+
+button {
+  padding: 19px 39px 18px 39px;
+  background-color: lightseagreen;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid lightcoral;
+  margin-bottom: 10px;
+  box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1);
+}
+
