--- a/css/styles.css
+++ b/css/styles.css
@@ -69,3 +69,31 @@ button {
   box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1);
 }
 
+fieldset {
+  margin-bottom: 30px;
+  border: none;
+}
+
+legend {
+  font-size: 1.4em;
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+label.light {
+  font-weight: 300;
+  display: inline;
+}
+
+/* MEDIA QUERIES */
+@media screen and (min-width: 480px) {
+
+  form {
+    max-width: 480px;
+  }
+}
+
